k8s/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uat
  name: kopa-node-backend
  labels:
    name: kopa-node-backend
    app: kopa-node-backend
spec:
  selector:
    matchLabels:
      app: kopa-node-backend
  template:
    metadata:
      name: kopa-node-backend
      labels:
        name: kopa-node-backend
        app: kopa-node-backend
    spec:
      containers:
        - name: kopa-node-backend
          imagePullPolicy: Always
          image: silasonyango93/kopa-node-backend:latest
          ports:
            - containerPort: 8080
