k8s/uat/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uat
  name: mysql-db
  labels:
    name: mysql-db
    app: mysql-db
spec:
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      name: mysql-db
      labels:
        name: mysql-db
        app: mysql-db
    spec:
      containers:
        - name: mysql-db
          imagePullPolicy: Always
          image: mysql:5.7
          ports:
            - containerPort: 3306
