k8s/uat/pma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uat
  name: pma
  labels:
    name: pma
    app: pma
spec:
  selector:
    matchLabels:
      app: pma
  template:
    metadata:
      name: pma
      labels:
        name: pma
        app: pma
    spec:
      containers:
        - name: pma
          imagePullPolicy: Always
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
