k8s/uat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: uat
  name: kopa-backend
  annotations:
    kubernetes.io/ingress.class: nginx
#    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    - host: backend.kopa.icube.ga
      http:
        paths:
          - path: /
            backend:
              serviceName: kopa-backend
              servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: uat
  name: pma
  annotations:
    kubernetes.io/ingress.class: nginx
#    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    - host: pma.kopa.icube.ga
      http:
        paths:
          - path: /
            backend:
              serviceName: pma
              servicePort: 80
